--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,46 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="502.0" prefWidth="750.0" style="-fx-background-color: #DEDEED;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <children>
+      <AnchorPane layoutX="522.0" layoutY="92.0" prefHeight="394.0" prefWidth="200.0" style="-fx-background-color: #CFCBDC;">
+         <children>
+            <Button fx:id="btnSelectQuery" layoutX="7.0" layoutY="51.0" mnemonicParsing="false" onAction="#SelectQuery" prefHeight="47.0" prefWidth="187.0" style="-fx-background-color: #1fc28e;" text="Запрос на выборку" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnStoredProcedure" layoutX="7.0" layoutY="167.0" mnemonicParsing="false" onAction="#StoredProcedure" prefHeight="47.0" prefWidth="187.0" style="-fx-background-color: #1fc28e;" text="Хранимая процедуры" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnTrigger" layoutX="7.0" layoutY="282.0" mnemonicParsing="false" onAction="#Trigger" prefHeight="47.0" prefWidth="187.0" style="-fx-background-color: #1fc28e;" text="Триггер" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+      <Text fill="#1fc28e" layoutX="257.0" layoutY="50.0" stroke="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Клуб альпинистов">
+         <font>
+            <Font name="Arial Bold" size="28.0" />
+         </font>
+      </Text>
+      <AnchorPane layoutX="24.0" layoutY="92.0" prefHeight="394.0" prefWidth="473.0" style="-fx-background-color: #CFCBDC;">
+         <children>
+            <TextField fx:id="textFieldSelectQuery" layoutX="14.0" layoutY="33.0" prefHeight="84.0" prefWidth="428.0" text="Введите запрос на выборку" />
+            <TextField fx:id="textFieldstoredProcedure" layoutX="14.0" layoutY="150.0" prefHeight="84.0" prefWidth="428.0" text="Введите хранимую процедуру" />
+            <TextField fx:id="textFieldtrigger" layoutX="14.0" layoutY="264.0" prefHeight="84.0" prefWidth="428.0" text="Введите триггер" />
+            <Text fx:id="textQuery" fill="#f40202f2" layoutX="14.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="124.13671875" />
+            <Text fx:id="textProcedure" fill="#f40202" layoutX="14.0" layoutY="254.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="124.13671875" />
+            <Text fx:id="textTrigger" fill="#f40202" layoutX="14.0" layoutY="368.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="124.13671875" />
+         </children>
+      </AnchorPane>
+   </children>
+</AnchorPane>
